--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "reflect-metadata": "^0.2.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/ws": "^8.5.13",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8",
