chore: rename packages to fluxprotocol-* and publish to npm

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flux/cli",
+  "name": "fluxprotocol-cli",
   "version": "0.0.1",
   "description": "FLUX CLI - create, dev, build connectors",
   "type": "module",
