--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flux/sdk",
+  "name": "fluxprotocol-sdk",
   "version": "0.0.1",
   "description": "Universal AI Connectivity - 4 lines, zero learning curve",
   "type": "module",
