--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,10 @@
     "typescript": "^5.7.2",
     "rimraf": "^6.0.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaheesAhmed/flux-protocol"
+  },
   "keywords": ["flux", "cli", "mcp", "connector"],
   "license": "MIT"
 }
