--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,10 @@
     "typescript": "^5.7.2",
     "rimraf": "^6.0.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaheesAhmed/flux-protocol"
+  },
   "keywords": ["flux", "client", "mcp", "ai"],
   "license": "MIT"
 }
