--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -30,6 +30,10 @@
     "vitest": "^2.1.8",
     "rimraf": "^6.0.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaheesAhmed/flux-protocol"
+  },
   "keywords": ["ai", "mcp", "flux", "connector", "typescript"],
   "license": "MIT"
 }
