--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxprotocol-client",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "FLUX client library for HTTP and WebSocket",
   "type": "module",
   "main": "./dist/index.js",
@@ -11,6 +11,7 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
     "dev": "tsup src/index.ts --format esm --dts --watch",
