--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluxprotocol-sdk",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Universal AI Connectivity - 4 lines, zero learning curve",
   "type": "module",
   "main": "./dist/index.js",
@@ -11,6 +11,7 @@
       "types": "./dist/index.d.ts"
     }
   },
+  "files": ["dist", "README.md"],
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
     "dev": "tsup src/index.ts --format esm --dts --watch",
