--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,45 +42,10 @@ jobs:
           fi
           echo "✅ Build successful"
 
-  # Check if version changed - only on main branch
-  check-version:
+  # Auto-bump version and publish - only on main branch
+  publish:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build
-    runs-on: ubuntu-latest
-    outputs:
-      version_changed: ${{ steps.check.outputs.changed }}
-      new_version: ${{ steps.check.outputs.version }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: Check if version changed
-        id: check
-        run: |
-          CURRENT_VERSION=$(node -p "require('./packages/sdk/package.json').version")
-          git show HEAD~1:packages/sdk/package.json > old-package.json 2>/dev/null || echo '{"version":"0.0.0"}' > old-package.json
-          OLD_VERSION=$(node -p "require('./old-package.json').version")
-
-          echo "Old version: $OLD_VERSION"
-          echo "New version: $CURRENT_VERSION"
-
-          if [ "$OLD_VERSION" != "$CURRENT_VERSION" ]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-            echo "✅ Version changed from $OLD_VERSION to $CURRENT_VERSION"
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-            echo "ℹ️  Version unchanged: $CURRENT_VERSION"
-          fi
-
-  # Publish to npm - only when version changes on main
-  publish:
-    if: needs.check-version.outputs.version_changed == 'true'
-    needs: check-version
     runs-on: ubuntu-latest
 
     permissions:
@@ -92,6 +57,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -106,14 +72,48 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Auto-bump version in all packages
+        id: bump
+        run: |
+          # Get current version from SDK
+          CURRENT_VERSION=$(node -p "require('./packages/sdk/package.json').version")
+          
+          # Split version into parts
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+          
+          # Bump patch version
+          NEW_PATCH=$((PATCH + 1))
+          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          
+          echo "Bumping version: $CURRENT_VERSION -> $NEW_VERSION"
+          
+          # Update all package.json files
+          for pkg in packages/sdk packages/cli packages/client; do
+            node -e "
+              const fs = require('fs');
+              const pkg = JSON.parse(fs.readFileSync('$pkg/package.json', 'utf8'));
+              pkg.version = '$NEW_VERSION';
+              fs.writeFileSync('$pkg/package.json', JSON.stringify(pkg, null, 2) + '\n');
+            "
+            echo "Updated $pkg/package.json to v$NEW_VERSION"
+          done
+          
+          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Commit version bump
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add packages/*/package.json
+          git commit -m "chore: bump version to v${{ steps.bump.outputs.new_version }} [skip ci]" || echo "No changes to commit"
+          git push
+
       - name: Build project
         run: pnpm build
 
       - name: Create and push tag
         run: |
-          VERSION="v${{ needs.check-version.outputs.new_version }}"
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          VERSION="v${{ steps.bump.outputs.new_version }}"
           git tag -a "$VERSION" -m "Release $VERSION"
           git push origin "$VERSION"
 
@@ -134,19 +134,23 @@ jobs:
 
       - name: Create GitHub Release
         run: |
-          VERSION="v${{ needs.check-version.outputs.new_version }}"
+          VERSION="v${{ steps.bump.outputs.new_version }}"
           gh release create "$VERSION" \
             --title "Release $VERSION" \
-            --notes "## Packages Published
+            --notes "## 📦 Packages Published
 
-          - fluxprotocol-sdk@${{ needs.check-version.outputs.new_version }}
-          - fluxprotocol-cli@${{ needs.check-version.outputs.new_version }}
-          - fluxprotocol-client@${{ needs.check-version.outputs.new_version }}" \
+          - fluxprotocol-sdk@${{ steps.bump.outputs.new_version }}
+          - fluxprotocol-cli@${{ steps.bump.outputs.new_version }}
+          - fluxprotocol-client@${{ steps.bump.outputs.new_version }}
+
+          ## What's Changed
+          Auto-published on push to main." \
             --verify-tag
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Success notification
         run: |
-          echo "✅ Successfully published fluxprotocol packages v${{ needs.check-version.outputs.new_version }}"
+          echo "✅ Successfully published fluxprotocol packages v${{ steps.bump.outputs.new_version }}"
           echo "📦 npm: https://www.npmjs.com/package/fluxprotocol-sdk"
+
