--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,26 +11,35 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@toon-format/toon": "^2.1.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
     "@types/ws": "^8.5.13",
+    "rimraf": "^6.0.1",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "rimraf": "^6.0.1"
+    "typescript": "^5.7.2"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/RaheesAhmed/flux-protocol"
   },
-  "keywords": ["flux", "client", "mcp", "ai"],
+  "keywords": [
+    "flux",
+    "client",
+    "mcp",
+    "ai"
+  ],
   "license": "MIT"
 }
