--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,7 +11,10 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
     "dev": "tsup src/index.ts --format esm --dts --watch",
@@ -19,22 +22,29 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@toon-format/toon": "^2.1.0",
     "reflect-metadata": "^0.2.2",
-    "zod": "^3.24.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
     "@types/ws": "^8.5.13",
+    "rimraf": "^6.0.1",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.8",
-    "rimraf": "^6.0.1"
+    "vitest": "^2.1.8"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/RaheesAhmed/flux-protocol"
   },
-  "keywords": ["ai", "mcp", "flux", "connector", "typescript"],
+  "keywords": [
+    "ai",
+    "mcp",
+    "flux",
+    "connector",
+    "typescript"
+  ],
   "license": "MIT"
 }
